# apriscout

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
apriscout/: __init__.py  constants.py  models.py  routes.py  routes_apritable.py  services.py  utils.py
apriscout/static/scripts/: apritable.js  apritable_display.js
apriscout/static/style/: apritable.css
apriscout/static/styles/: apritable.css  base.css  home.css
apriscout/templates/: apritable.html  base.html  home.html  login.html  register.html  user.html
dev_scripts/: get_pokemon_table.py  get_sprites_balls.py  get_sprites_pokemon.py  update_pokemon_table.py
migrations/: env.py
migrations/versions/: 10c52b154de8_re_sort_pokemon_table.py  2eccecfe7dd2_initial_user_pokemon_and_userpokemon_.py  5543adceba6a_remove_is_female_pokemon_table.py  5768e560d778_condense_ball_names.py  7bd4d0a53b3a_pokemon_table_capitalisation.py  a8e4add3afee_add_custom_categories.py  ce5c9ea3e84c_add_is_start_is_legendary.py  f17b0326b29d_refactor_pokemon_table.py
tests/: __init__.py  conftest.py  test_apritable.py  test_auth.py
