[tool.poetry]
name = "apriscout"
version = "0.1.0"
description = ""
authors = ["Adam Hennessy <ahenneuk@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.ruff]
line-length = 100
[tool.pytest.ini_options]
addopts = '-ra'
