[tool.poetry]
name = "apriscout"
version = "0.1.1"
description = ""
authors = ["Adam Hennessy <ahenneuk@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.1.1"
flask-migrate = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.3"
pydocstyle = "^6.3.0"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

### dev config

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false 

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["personal_notes", "dev_scripts"]  # Folders to exclude

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C90", "N", "SIM", "COM"]

[tool.pytest.ini_options]
addopts = '-ra'

[tool.pydocstyle]
convention = "google"
